[package]
name = "rnemu"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.5"
colored = "2"
clap = { version = "4.5.23", features = ["derive"] }
chrono = "0.4"
cfg-if = "1.0"
spin = "0.9"
num-format = "0.4"
rustyline = "15.0.0"
nom = "7.1"
[features]
default = ["riscv32"]
trace = []
device = []
64bit = []
32bit = []
x86 = []
x86-64 = []
riscv32 = ["32bit"]
riscv64 = []
am = []
